[package]
name = "algs"
version = "0.1.0"
authors = ["Jack Clayton"]
description = "Fastest solutions for various algorithms collected from challenges"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jackos/algs"
documentation = "https://docs.rs/algs/"
edition = "2021"

[dependencies]
funty = "2.0.0"
num = "0.4.0"
num-traits = "0.2.14"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }

# [[bench]]
# name = "fib"
# harness = false

# [[bench]]
# name = "atoi"
# harness = false

[[bench]]
name = "palindrome"
harness = false
