[package]
name = "algs"
version = "0.1.2"
authors = ["Jack Clayton"]
description = "Solutions for various algorithms, made as generic as possible"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jackos/algs"
documentation = "https://docs.rs/algs/"
edition = "2021"

[dependencies]
funty = "2.0.0"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }

[[bench]]
name = "fib"
harness = false

[[bench]]
name = "atoi"
harness = false

[[bench]]
name = "palindrome"
harness = false
